# CV_in_HIT

./: .gitignore  CMakeLists.txt  README.md
Photometric Stereo Method/: rebuild.m
calibration/: calibration.cpp
filter/: filter.cpp
homography/: homography.cpp
homography/result/left10/: left10.txt
homography/result/left12/: left12.txt
homography/result/left13/: left13.txt
homography/result/left7/: left7.txt
homography/result/left8/: left8.txt
homography/result/left9/: left9.txt
optical flow/: optical_flow.m
skin_detection/: skin.cpp
